Remove pictures and change colors

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#1DA0F2</color>
-    <color name="colorPrimaryDark">#0086da</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#df1700</color>
+    <color name="colorPrimaryDark">#a71100</color>
+    <color name="colorAccent">#2d34ff</color>
 
     <color name="primary">#E43F3F</color>
     <color name="white">#FFFFFF</color>
